apps/cosmo/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cosmo-studio
  namespace: cosmo
  annotations:
    tailscale.com/hostname: cosmo-studio
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - cosmo-studio
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cosmo-studio
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cosmo-controlplane
  namespace: cosmo
  annotations:
    tailscale.com/hostname: cosmo-controlplane
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - cosmo-controlplane
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cosmo-controlplane
                port:
                  number: 3001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cosmo-keycloak
  namespace: cosmo
  annotations:
    tailscale.com/hostname: cosmo-keycloak
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - cosmo-keycloak
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cosmo-keycloak-http
                port:
                  number: 8080
